--- a/requirements.txt
+++ b/requirements.txt
@@ -1,216 +1,8 @@
-alabaster==0.7.10
-alembic==0.9.9
-anaconda-client==1.6.3
-anaconda-navigator==1.6.2
-anaconda-project==0.6.0
-asn1crypto==0.22.0
-astroid==1.4.9
-astropy==1.3.2
-awsebcli==3.12.4
-Babel==2.4.0
-backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4==4.6.0
-bitarray==0.8.1
-blaze==0.10.1
-bleach==1.5.0
-blessed==1.14.2
-bokeh==0.12.5
-boto==2.46.1
-botocore==1.10.4
-Bottleneck==1.2.1
-cement==2.8.2
-certifi==2018.1.18
-cffi==1.10.0
-chardet==3.0.3
-chest==0.2.3
-click==6.7
-cloudpickle==0.2.2
-clyent==1.2.2
-colorama==0.3.7
-conda==4.5.0
-configobj==5.0.6
-contextlib2==0.5.5
-cryptography==1.8.1
-cycler==0.10.0
-Cython==0.25.2
-cytoolz==0.8.2
-dask==0.14.3
-datashape==0.5.4
-decorator==4.0.11
-dicttoxml==1.7.4
-dill==0.2.5
-distributed==1.16.3
-Django==2.0.2
-dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.13.1
-entrypoints==0.2.2
-et-xmlfile==1.0.1
-Faker==0.8.12
-fastcache==1.0.2
-Flask==0.12.2
-Flask-Cors==3.0.2
-Flask-Login==0.4.0
-Flask-Migrate==2.0.4
-Flask-MySQL==1.4.0
-Flask-MySQLdb==0.2.0
-Flask-Script==2.0.6
-Flask-SeaSurf==0.2.2
-Flask-SQLAlchemy==2.2
-Flask-WTF==0.14.2
-future==0.16.0
-gevent==1.2.1
-greenlet==0.4.12
-h5py==2.7.0
-HeapDict==1.0.0
-hmmlearn==0.2.0
-html5lib==0.999
-httplib2==0.11.1
-idna==2.5
-imagesize==0.7.1
-ipykernel==4.6.1
-ipython==5.3.0
-ipython-genutils==0.2.0
-ipywidgets==6.0.0
-isort==4.2.5
-itsdangerous==0.24
-jdcal==1.3
-jedi==0.10.2
-Jinja2==2.9.6
-jmespath==0.9.3
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.0.1
-jupyter-console==5.1.0
-jupyter-core==4.3.0
-Keras==2.0.2
-Kivy==1.10.0
-Kivy-Garden==0.1.4
-lazy-object-proxy==1.2.2
-llvmlite==0.18.0
-locket==0.2.0
-lxml==3.7.3
-Mako==1.0.7
-MarkupSafe==0.23
-matplotlib==2.0.2
-mistune==0.7.4
-mpmath==0.19
-msgpack-python==0.4.8
-multipledispatch==0.4.9
-mysqlclient==1.3.12
-navigator-updater==0.1.0
-nbconvert==5.1.1
-nbformat==4.3.0
-networkx==1.11
-nltk==3.2.3
-nose==1.3.7
-notebook==5.0.0
-numba==0.33.0
-numexpr==2.6.2
-numpy==1.12.1
-numpydoc==0.6.0
-oauth2client==4.1.2
-oauthlib==2.0.7
-odo==0.5.0
-olefile==0.44
-opencv-python==3.2.0.6
-openpyxl==2.4.7
-ordereddict==1.1
-packaging==16.8
-pandas==0.20.1
-pandocfilters==1.4.1
-partd==0.3.8
-passlib==1.7.1
-pathlib==1.0.1
-pathlib2==2.2.1
-pathspec==0.5.5
-patsy==0.4.1
-pep8==1.7.0
-pexpect==4.2.1
-pickleshare==0.7.4
-Pillow==4.1.1
-pipenv==11.9.0
-ply==3.10
-prompt-toolkit==1.0.14
-protobuf==3.3.0
-psutil==5.2.2
-psycopg2==2.7.1
-psycopg2-binary==2.7.4
-ptyprocess==0.5.1
-py==1.4.33
-pyasn1==0.1.9
-pyasn1-modules==0.0.9
-pycosat==0.6.3
-pycparser==2.17
-pycrypto==2.6.1
-pycurl==7.43.0
-pyflakes==1.5.0
-pygame==1.9.3
-Pygments==2.2.0
-pylint==1.6.4
-PyMySQL==0.8.0
-pyodbc==4.0.16
-pyOpenSSL==17.0.0
-pyparsing==2.1.4
-pysolr==3.6.0
-pytest==3.0.7
-python-dateutil==2.6.0
-python-editor==1.0.3
-pytz==2017.2
-PyWavelets==0.5.2
-PyYAML==3.12
-pyzmq==16.0.2
-QtAwesome==0.4.4
-qtconsole==4.3.0
-QtPy==1.2.1
-redis==2.10.5
-requests==2.9.1
-requests-oauthlib==0.8.0
-requests-toolbelt==0.8.0
-rope-py3k==0.9.4.post1
-rsa==3.4.2
-scikit-image==0.13.0
-scikit-learn==0.18.1
-scipy==0.19.0
-seaborn==0.7.1
-semantic-version==2.5.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.10.0
-snowballstemmer==1.2.1
-sockjs-tornado==1.0.3
-sortedcollections==0.5.3
-sortedcontainers==1.5.7
-Sphinx==1.5.6
-spyder==3.1.4
-SQLAlchemy==1.1.11
-statsmodels==0.8.0
-sympy==1.0
-tables==3.3.0
-tabulate==0.7.5
-tblib==1.3.2
-tensorflow==1.0.0
-termcolor==1.1.0
-terminado==0.6
-testpath==0.3
-text-unidecode==1.2
-Theano==0.9.0
-toolz==0.8.2
-tornado==4.5.1
-traitlets==4.3.2
-udacity-pa==0.2.6
-unicodecsv==0.14.1
-virtualenv==15.2.0
-virtualenv-clone==0.3.0
-watson-developer-cloud==0.26.1
-wcwidth==0.1.7
-websocket-client==0.47.0
-Werkzeug==0.12.2
-widgetsnbextension==2.0.0
-wordcloud==1.3.1
-wrapt==1.10.10
-WTForms==2.1
-xlrd==1.0.0
-XlsxWriter==0.9.6
-xlwt==1.2.0
-zict==0.1.2
+flask
+oauth2client
+SQLAlchemy
+Requests
+dicttoxml
+httplib2
+psycopg2
+gunicorn
